--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.webjars:bootstrap:3.3.7-1')
+	compile('org.webjars:jquery:3.1.1-1')
+	compile('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
